apps/vault/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vault-ui
  namespace: vault
spec:
  parentRefs:
    - name: internal-gateway
      namespace: gateway
      sectionName: http
    - name: internal-gateway
      namespace: gateway
      sectionName: https
  hostnames:
    - vault.injunweb.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vault-ui
          port: 8200
