apps/vault/templates/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vault-ui
  namespace: vault
spec:
  entryPoints:
    - intweb
    - intwebsec
  routes:
    - kind: Rule
      match: Host(`vault.injunweb.com`)
      services:
        - name: vault-ui
          port: 8200
